Closed Bug 1504746 Opened 6 years ago Closed 6 years ago

Fuzzyfox does not shut down

Categories

(Core :: DOM: Security, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla65
Tracking Status
firefox65 --- verified

People

(Reporter: tjr, Assigned: tjr)

References

Details

(Whiteboard: [domsecurity-active])

Attachments

(1 file)

Small regression from 1502686; where currently Nightly has a broken Fuzzyfox that will hang when you try to disable it.
Attachment #9022661 - Flags: review?(amarchesini) → review+
Pushed by nbeleuzu@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/6d850fafd7d1
Disabling fuzzyfox should disable it. r=baku
Keywords: checkin-needed
Status: NEW → ASSIGNED
Priority: -- → P2
Whiteboard: [domsecurity-active]
https://hg.mozilla.org/mozilla-central/rev/6d850fafd7d1
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Build ID 	20181109101751
User Agent 	Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:65.0) Gecko/20100101 Firefox/65.0

Verified, I am able to turn on and turn off the Fuzzyfox.
Flags: qe-verify+
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: