Bug 1504746 - Disabling fuzzyfox should disable it. r=baku

--HG--
extra : rebase_source : 898ac9cb6bb0ed69e42f0e2670bcc74d2235b11c